--- a/style.css
+++ b/style.css
@@ -478,3 +478,156 @@ form .send-btn:hover{
   color: var(--text-color);
   font-size: 28px;
 }
+
+/**********Media Query Section**********/
+@media (max-width: 1699px){
+  /**Header**/
+  header{
+    padding: 20px 8%;
+  }
+  header.sticky{
+    padding: 14px 8%;
+  }
+  section{
+    padding: 90px 8% 80px;
+  }
+  .logo{
+    font-size: 28px;
+  }
+  .logo img{
+    width: 120px;
+  }
+  /**Footer**/
+  .footer{
+    padding: 18px 8%;
+  }
+}
+
+@media (max-width: 1380px){
+  /**Header**/
+  header{
+    padding: 20px 5%;
+  }
+  header.sticky{
+    padding: 14px 5%;
+  }
+  section{
+    padding: 90px 5% 80px;
+  }
+  /**Footer**/
+  .footer{
+    padding: 18px 5%;
+  }
+  /**Hero**/
+  .hero{
+    /*height: 90vh;*/
+    background-position: center;
+  }
+}
+
+@media (max-width: 1290px){
+  .box{
+    padding: 40px 40px 46px;
+  }
+  .box img{
+    width: 100%;
+    height: 60px;
+    max-width: 60px;
+  }
+  .box h3{
+    font-size: 21px;
+  }
+}
+
+@media (max-width: 1240px){
+  .about{
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    text-align: center;
+  }
+  .about-img img{
+    text-align: center;
+    width: 100%;
+    height: 400px;
+    max-width: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+  }
+  :root{
+    --h1-font: 4rem;
+    --h2-font: 2.2rem;
+    --p-font: 15px;
+  }
+}
+
+@media (max-width: 950px){
+  :root{
+    --h1-font: 3.5rem;
+  }
+  .social{
+    margin-bottom: 20px;
+  }
+  #menu-icon{
+    display: block;
+  }
+  .navlist{
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 255px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    transition: all .50s ease;
+  }
+  .navlist a{
+    display: block;
+    padding: 18px;
+    font-size: 22px;
+  }
+  .navlist.active{
+    right: 0;
+  }
+}
+
+@media (max-width: 680px){
+  .main-content{
+    width: 100%;
+    min-height: 100vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .main-content p{
+    width: 100%;
+  }
+  .hero{
+    display: flex;
+    flex-direction: column;
+  }
+  form .send-btn{
+    width: 50%;
+    align-items: center;
+    text-align: center;
+  }
+  .h-btn{
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 480px){
+  :root{
+    --h1-font: 3rem;
+    --h2-font: 2rem;
+  }
+  .about-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
+  }
+  .about-text h2{
+    width: 100%;
+  }
+}
