--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   scroll-behavior: smooth;
   list-style: none;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /**********Important Universal**********/
